backend configurations